--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@ ul {
 
 .container-one {
     display: flex;
-    height: 400px;
+    height: 500px;
     flex-direction: column;
     background-color: #1F2937;
-    padding: 24px 120px;
+    padding: 24px 0px;
 }
 
 .header {
@@ -27,6 +27,8 @@ ul {
     justify-content: space-between;
     align-items: center;
     color: #F9FAF8;
+    width: 70%;
+    margin: 0 auto;
 }
 
 .logo {
@@ -45,14 +47,76 @@ ul {
     height: 100%;
     align-items: center;
     justify-content: space-between;
-    gap: 8px;
+    gap: 24px;
+    width: 70%;
+    margin: 0 auto;
+}
+
+.main .subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-bottom: 8px;
 }
 
 .img {
     display: flex;
+    flex: auto;
     justify-content: center;
     align-items: center;
     background-color: grey;
-    height: 150px;
-    width: 250px;
+    height: 200px;
+    width: 500px;
+}
+
+.sign-up {
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 8px;
+    border: 1px solid royalblue;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    width: 98px;
+}
+
+.container-two {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 475px;
+    padding: 24px 0px;
+}
+
+.container-two .title {
+   font-size: 36px;
+   font-weight: 800;
+   columns: #1F2937; 
+}
+
+.card-list {
+    display: flex;
+    justify-content: space-between;
+    width: 60%;
+    height: 70%;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+}
+
+.card {
+    display: flex;
+    border: 4px solid royalblue;
+    border-radius: 16px;
+    width: 145px;
+    height: 145px;
+}
+
+.info .subtext {
+    text-align: center;
+    color: rgb(45, 45, 45);
 }
